--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "@babel/node": "^7.13.13",
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.13.15",
+    "@shelf/jest-mongodb": "^1.2.4",
     "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jest": "^26.6.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.3",
-    "nodemon": "^2.0.7"
+    "multer": "^1.4.2",
+    "nodemon": "^2.0.7",
+    "supertest": "^6.1.3",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "nodemon src/app.js --exec babel-node"
