--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "@babel/cli": "^7.13.14",
     "@babel/core": "^7.13.15",
     "@babel/node": "^7.13.13",
+    "@babel/plugin-transform-runtime": "^7.13.15",
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.13.15",
-    "@shelf/jest-mongodb": "^1.2.4",
     "axios": "^0.21.1",
+    "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
