--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.1",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jest": "^26.6.3",
@@ -22,6 +23,8 @@
     "multer": "^1.4.2",
     "nodemon": "^2.0.7",
     "supertest": "^6.1.3",
+    "swagger-jsdoc": "6.0.1",
+    "swagger-ui-express": "^4.1.6",
     "uuid": "^8.3.2"
   },
   "scripts": {
